# klynx

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
klynx/: TOOLS.md  __init__.py  mcp_servers.json.example  requirements.txt
klynx/agent/: __init__.py  agents.py  backend.py  builder.py  context_manager.py  graph.py  hooks.py  mcp_manager.py  nodes.py  package.py  prompt_builder.py  routing.py  state.py  store.py  toolbox.py
klynx/agent/prompts/: ask_base.md  system_base.md
klynx/agent/prompts/fragments/: memory_mode.md  plan_mode.md  review_mode.md  task_state_updates_mimo.md  tool_selection.md  tui_mode.md
klynx/agent/subgraphs/: __init__.py  ask.py  klynx_loop.py  react_once.py
klynx/agent/tools/: __init__.py  browser.py  dispatch.py  interactive_exec.py  lsp.py  lsp_client.py  registry.py  syntax.py  terminal.py  tui.py  web_search.py
klynx/agent/utils/: __init__.py  formatters.py
klynx/example/: ReAct_example.py  __init__.py  basic_agent_example.py  direct_answer_agent_example.py
klynx/model/: __init__.py  adapter.py  registry.py
klynx/skills/system/skill-creator/: SKILL.md
klynx/skills/system/skill-creator/scripts/: init_skill.py
klynx/skills/system/skill-installer/: SKILL.md
klynx/skills/system/skill-installer/scripts/: install-skill-from-github.py  list-skills.py
